[package]
name = "lazer"
version = "0.3.0"
authors = ["Will Henderson <14willh@gmail.com>"]
edition = "2018"
description= "A console printer with a fluent API"
documentation = "https://github.com/w-ah/lazer-rs/issues"
readme = "README.md"
homepage = "https://github.com/w-ah/lazer-rs"
repository = "https://github.com/w-ah/lazer-rs"
license-file = "LICENSE"
keywords = ["console", "print", "log", "logger"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "^0.4.19"
